# screenshoter

diff_screenshoter/: CMakeLists.txt  bitmap_from_image.cpp  bitmap_from_image.h  main.cpp
simple_screenshoter/: CMakeLists.txt  bitmap_from_image.cpp  bitmap_from_image.h  main.cpp
